--- a/style.css
+++ b/style.css
@@ -1,128 +1,121 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Just Another Hand', cursive;
-    /* color: #565656; */
-    background-color: #112B3C;
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Just Another Hand", cursive;
+  /* color: #565656; */
+  background-color: #112b3c;
 }
 
-.head{
-    font-size: 45px;
-    letter-spacing: 3px;
-    border-bottom: 3px solid #EC994B;
-    color: #EC994B;
-    width: 400px;
-    text-align: center;
+.head {
+  font-size: 45px;
+  letter-spacing: 3px;
+  border-bottom: 3px solid #ec994b;
+  color: #ec994b;
+  width: 400px;
+  text-align: center;
 }
 
-.board{
-    width: 400px;
-    height: 400px;
-    margin: 0;
-    margin: 15px ;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 33% 33% 33%;
+.board {
+  width: 400px;
+  height: 400px;
+  margin: 0;
+  margin: 15px;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: 33% 33% 33%;
 }
 
-.square{
-    border: 1px solid #EC994B;
-    color: #EC994B;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 70px;
-    cursor: pointer;
+.square {
+  border: 1px solid #ec994b;
+  color: #ec994b;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 70px;
+  cursor: pointer;
 }
 
-#n-1{
-    border-top: none;
-    border-left: none;
+#n-1 {
+  border-top: none;
+  border-left: none;
 }
 
-#n-2{
-    border-top: none;
-    
+#n-2 {
+  border-top: none;
 }
 
-#n-3{
-    border-top: none;
-    border-right: none;
-    
+#n-3 {
+  border-top: none;
+  border-right: none;
 }
 
-#n-4{
-    border-left: none;
-    
+#n-4 {
+  border-left: none;
 }
 
-#n-6{
-    border-right: none;
-    
+#n-6 {
+  border-right: none;
 }
 
-#n-7{
-    border-bottom: none;
-    border-left: none;
-    
+#n-7 {
+  border-bottom: none;
+  border-left: none;
 }
 
-#n-8{
-    border-bottom: none;
-    
+#n-8 {
+  border-bottom: none;
 }
 
-#n-9{
-    border-bottom: none;
-    border-right: none;
-    
+#n-9 {
+  border-bottom: none;
+  border-right: none;
 }
 
-.rest-btn{
-    font-size: 18px;
-    padding: 5px 15px;
-    border-radius: 50px;
-    border: 1px solid #112B3C;
-    background-color: #EC994B;
-    color: #112B3C;
-    cursor: pointer;
-    margin-top: 10px;
-    transition-property: background color border;
-    transition-duration: .2s;
+.rest-btn {
+  font-size: 18px;
+  padding: 5px 15px;
+  border-radius: 50px;
+  border: 1px solid #112b3c;
+  background-color: #ec994b;
+  color: #112b3c;
+  cursor: pointer;
+  margin-top: 10px;
+  transition-property: background color border;
+  transition-duration: 0.2s;
 }
 
-.rest-btn:hover{
-    border-color: #EC994B;
-    background-color: #112B3C;
-    color: #EC994B;
+.rest-btn:hover {
+  border-color: #ec994b;
+  background-color: #112b3c;
+  color: #ec994b;
 }
 
-.game-over{
-    width: 450px;
-    height: 200px;
-    background-color: #112B3C;
-    font-size: 50px;
-    color: #EC994B;
-    border-radius: 5px;
-    border: 3px solid #EC994B;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.game-over {
+  width: 450px;
+  height: 200px;
+  background-color: #112b3c;
+  font-size: 50px;
+  color: #ec994b;
+  border-radius: 5px;
+  border: 3px solid #ec994b;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.hidden{
-    display: none;
+.hidden {
+  display: none;
 }
